    When updating the format, the internal variable
    _STARPU_PERFMODEL_VERSION should be updated. It is then possible
    to switch easily between differents versions of StarPU having
    different performance model formats.
  * Tasks can now define a optional prologue callback which is executed
    on the host when the task becomes ready for execution, before getting
    scheduled.

Small features:
  * New function starpu_perfmodel_directory() to print directory
    storing performance models. Available through the new option -d of
    the tool starpu_perfmodel_display
  * New batch files to execute StarPU applications under Microsoft
    Visual Studio (They are installed in path_to_starpu/bin/mvsc)/
  * Add cl_arg_free, callback_arg_free, prologue_callback_arg_free fields to
    enable automatic free(cl_arg); free(callback_arg);
    free(prologue_callback_arg) on task destroy.
  * New function starpu_task_build

Changes:
  * Modification of perfmodels output format for future improvements.
  * Fix for properly dealing with NAN on windows systems

StarPU 1.1.0rc2 (svn revision 10575)
==============================================
The scheduling context release

Changes:
  * StarPU-MPI: Fix potential bug for user-defined datatypes. As MPI
    can reorder messages, we need to make sure the sending of the size
    of the data has been completed.
  * Documentation is now generated through doxygen.

Small Changes:
  * Explicitly name the non-sleeping-non-running time "Overhead", and use
    another color in vite traces.
  * Use C99 variadic macro support, not GNU.
  * Fix performance regression: dmda queues were inadvertently made
    LIFOs in r9611.
  * Invert GPU-GPU direct transfer control environment variable name,
    i.e environment variable STARPU_ENABLE_CUDA_GPU_GPU_DIRECT should
    be used instead of STARPU_DISABLE_CUDA_GPU_GPU_DIRECT.

StarPU 1.1.0rc1 (svn revision 9750)
==============================================

New features: